1. Удаление дублирования в запросах getFilmsByDirector. 2. Замена List.of() и Map.of() на Collections.emptyList() и Collections.emptyMap().